edits and shifts before adding research workflow graphic and explanation.

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -130,29 +130,9 @@ would want to be found at the completion of the project before cataloging what y
 have. That way you can have time to anticipate what can go where, and adapt if
 necessary before materials are published. 
 
-This is particularly relevant when you know your data will be archived. Different disciplines operate with their own distinct set of
-accepted standards of how things should be archived. One example of this can be
-found in the field of structural biology. Nearly all protein or molecular
-structures are submitted to the Protein Data Bank (PDB) which creates citable
-identifers for each submission and follows a set of standard file types to enable 
-reuse. This makes protein structures easily searchable with their identifier 
-and easily reusable since files are uploaded in a standardized and widely-used 
-format\cite{Wilkinson2016}. Following the standards set by experts in the field 
-as you design your information ecosystem will reduce the barrier to finding relevant materials associated with your work.
-
-Figuring out what ``done'' will look like can be personally motivating, but once
-again, you must be mindful of what your users will consider a useful outcome, which
-may not align with what you would do if you were the information's only consumer.
-Remember that your future self is also one of your users: everyone is prone to 
-forgetfulness, so anything you do for others will likely pay off for yourself
-eventually\cite{Briney2015}.
-
-Remember too that the strategies users employ to find something can look different 
-in different contexts. Users may need to find your (published or unpublished)
-work on the web, find a specific item within a website, and/or find a particular 
-piece of information within a specific file or item within a webpage. Depending on 
-your content, you may have challenges in all three areas; the remaining tips on 
-context and content will help you address these issues.
+This is particularly relevant when examining a typical research workflow. By planning ahead, you can identify what research items can go where, and update them if
+necessary before materials are published in a peer-reviewed journal or cited in a 
+grant application.
 
 Elaborating on the example from the previous tip about the faculty member's website, 
 we can catch a glimpse of the variety of user needs:
@@ -185,12 +165,17 @@ we can catch a glimpse of the variety of user needs:
 \end{itemize}
 
 \noindent
-Each of the users might want content organized chronologically or topically.
-In websites that are generated programmatically using tools such as Blogdown\cite{Xie2017} 
-or Wordpress \cite{Williams2015} these types organization features may be simple to implement. 
-However, increasing the number of site navigation options may confuse the user if it is unclear how items relate to each other. 
-Authors must strike a balance between offering filtering and searching options, 
-and being as inclusive as possible when deciding how materials will be structured and shared with their users.
+Following the standards\cite{Wilkinson2016} set by experts in the field 
+as you design your information ecosystem will reduce the barrier to finding relevant materials associated with your work. Remember that your future self is also one of your users: everyone is prone to 
+forgetfulness, so anything you do for others will likely pay off for yourself
+eventually\cite{Briney2015}.
+
+Remember too that the strategies users employ to find something can look different 
+in different contexts. Users may need to find your (published or unpublished)
+work on the web, find a specific item within a website, and/or find a particular 
+piece of information within a specific file or item within a webpage. Depending on 
+your content, you may have challenges in all three areas; the remaining tips on 
+context and content will help you address these issues.
 
 \rulemajor{3. Use textual structure.}
 
@@ -326,6 +311,13 @@ but also refine what they would search for based on the terms used in those
 headings. Navigation bars on websites function in a similar way: if the user
 knows exactly what they are looking for, they can scan the menu and select the
 option that matches their need.
+
+Additionally, users might want content organized chronologically or topically.
+In websites that are generated programmatically using tools such as Blogdown\cite{Xie2017} 
+or Wordpress \cite{Williams2015} these types organization features may be simple to implement. 
+However, increasing the number of site navigation options may confuse the user if it is unclear how items relate to each other. 
+Authors must strike a balance between offering filtering and searching options, 
+and being as inclusive as possible when deciding how materials will be structured and shared with their users.
 
 \rulemajor{6. Mimic real world directions.}
 
