incorporated Ibraheem's changes, included updated citations

--- a/10-findable.bib
+++ b/10-findable.bib
@@ -22,6 +22,14 @@
  year = {2002}
 }
 
+@misc{bioRxiv2020,
+ author = {{bioRxiv}},
+ title = {biorxiv.org},
+ year = {2020},
+ howpublished = {\url{https://www.biorxiv.org/}}
+}
+
+
 @book{Borges2000,
  author = {{Jorge Luis} Borges},
  title = {Selected Non-Fictions},
@@ -51,6 +59,13 @@
  title = {doi.org},
  year = {2020},
  howpublished = {\url{https://doi.org/}}
+}
+
+@misc{DRYAD2020,
+  author = {{DRYAD}},
+  title = {datadryad.org},
+  year = {2020},
+  howpublished = {https://datadryad.org/stash}
 }
 
 @misc{FAIR2020,
@@ -105,6 +120,13 @@
  howpublished = {\url{https://orcid.org/}}
 }
 
+@misc{PLOS2020,
+  author = {{PLOS ONE}},
+  title = {Recommended Repositories},
+  year = {2020},
+  howpublished = {https://journals.plos.org/plosone/s/recommended-repositories}
+}
+
 @misc{Pudding,
   author = {{The Pudding}},
   title = {Data sets created for stores on {The Pudding}},
@@ -118,6 +140,17 @@
  year = {2015},
  publisher = {O'Reilly Media Inc.},
  isbn = {9781491911686},
+}
+
+@article{Teytelman2016,
+ title = {Protocols.io: Virtual Communities for Protocol Development and Discussion},
+ author = {Leonid Teytelman, Alexei Stoliartchouk, Lori Kindler, Bonnie L. Hurwitz},
+ journal = {PLoS Biology},
+  year = {2016},
+  month = {08},
+  volume = {14},
+  number = {8},
+  doi = {10.1371/journal.pbio.1002538}
 }
 
 @book{Williams2015,
@@ -135,7 +168,7 @@
   publisher = {{PLoS}},
   title = {Best Practices for Scientific Computing},
   year = {2014},
-  month = {January},
+  month = {01},
   volume = {12},
   number = {1},
   doi = {10.1371/journal.pbio.1001745}
@@ -170,4 +203,11 @@
  publisher = {Chapman and Hall/CRC},
  year = {2017},
  isbn = {9780815363729}
+}
+
+@misc{ZENODO2020,
+ author = {ZENODO},
+ title = {zenodo.org},
+ year = {2020},
+ howpublished = {\url{https://zenodo.org/}}
 }
