--- a/10-findable.tex
+++ b/10-findable.tex
@@ -130,49 +130,63 @@ would want to be found at the completion of the project before cataloging what y
 have. That way you can have time to anticipate what can go where, and adapt if
 necessary before materials are published. 
 
-This is particularly relevant when examining a typical research workflow. By planning ahead, you can identify what research items can go where, and update them if
-necessary before materials are published in a peer-reviewed journal or cited in a 
-grant application.
+This is particularly relevant when examining a typical research workflow (Figure 1). A researcher uses a particular set of 
+data sources (Fig 1A), such as model organisms, molecular systems, publicly 
+available next-generation sequencing data or even locally curated collections of microscopy images.
+Subsequently, data sources are treated with specialized protocols and tools in the lab (Fig 1B) which help visualize, 
+identify or extrapolate new observations about biological phenomena (Fig 1C). After repetition, 
+trends seen among noisy biological observations can be further analyzed, visualized, and 
+statistically evaluated with software or code (Fig 1D). Finally, the researcher builds context
+for the work by writing a manuscript and citing relevant literature (Fig 1E). Manuscripts are revised
+by colleagues in the field through peer review (Fig 1F) and published in a peer reviewed journal.
 
-Elaborating on the example from the previous tip about the faculty member's website, 
-we can catch a glimpse of the variety of user needs:
+By planning ahead, you can identify what research products can go where, and update them if
+necessary before materials are published in a peer-reviewed journal or cited in a 
+grant application. 
+Recent advancements in best-practices for making research products more 'FAIR' has led to the creation of a vast array of discipline specific, and general repositories\cite{PLOS2020}, for researchers to deposit products created from each of the steps in the research workflow.
+Many repositories now create Digital Object Identifers (DOIs)\cite{DOI2020}, or other permanent identifiers
+for their submissions, making them citable and easily linked to contributing researchers via Open 
+Researcher and Contributor IDs (ORCIDs)\cite{ORCID2020} (Fig 1G). Many repositories follow the standards
+set by experts in the field, only reporting information that is recommended for reproducibilty
+while employing necessary practices to protect the privacy of sensitive information. 
+
+Elaborating on the example of the hypothetical faculty member, planning ahead to figure out what records need to be preserved will ensure her research is accessible and reusable.  Her work will be easier to find for a variety of users, because nearly all major research products can be citable and interlinked.  The resulting network of citations aids findability greatly:
 
 \begin{itemize}
 
 \item
-  Tenure committee members will want human-readable descriptions of related sets
-  of papers along with links to presentations or posters that discuss them.
+  Data stored in Dryad\cite{DRYAD2020} allows her to cite the same source in
+  multiple publications with a single DOI. She can update the data archive as new
+  pertinant data is collected and the link will not change.
  
 \item
-  A librarian might want bibliographic information for your publications in
-  machine-readable form (e.g., BibTeX, MARC, or MODS), either for individual
-  items or in bulk for addition to an institutional repository.
+  Lab protocols maintained in Protocols.io\cite{Teytelman2016}
+  ensure future collaborators, lab members and students can easily find her established
+  protocols using a DOI, while keeping incomplete protocol drafts private.
 
 \item
-  Collaborators might need links to articles, protocols, software or 
-  data used in order to reproduce particular results, or begin
-  their own lineage of inquiry.
+  Code used to analyze the data is deposited in Zenodo\cite{ZENODO2020} which she can cite and update
+  as code gets optimized and new versions are created, which also allows anyone looking to reproduce her research to also reproduce her analysis.
 
 \item
-  Students might look for prominent links to the university's learning management
-  system (LMS) to access course materials, general information about the subject 
-  of the faculty member's research group, or employment opportunities. 
+  Posting finalized drafts of her student's research manuscripts on a preprint site like BioRxiv\cite{bioRxiv2020}  enables colleauges to download the draft easily and 
+  discuss in an upcoming Journal Club. 
   
   \item
-  Everyone will want persistent links like Digital Object Identifiers (DOIs) \cite{DOI2020} 
-  and ORCID \cite{ORCID2020} identifiers, in order to find your papers or research products.
+  Her ORCID identifier is linked to each of the DOIs created by these repositiories, 
+  ensuring that students, collaborators, tenure committees, 
+  and librarians can all access her work product with one link.
 
 \end{itemize}
 
 \noindent
-Following the standards\cite{Wilkinson2016} set by experts in the field 
+Following the standards recommended by experts\cite{Wilkinson2016} in the field 
 as you design your information ecosystem will reduce the barrier to finding relevant materials associated with your work. Remember that your future self is also one of your users: everyone is prone to 
 forgetfulness, so anything you do for others will likely pay off for yourself
 eventually\cite{Briney2015}.
 
-Remember too that the strategies users employ to find something can look different 
-in different contexts. Users may need to find your (published or unpublished)
-work on the web, find a specific item within a website, and/or find a particular 
+Planning to incorporate persistent identifiers into the research workflow is a straightforward way to design for findability. Remember too that the strategies users employ to find something can look different 
+in different contexts. Beyond finding your published or unpublished work on the web, users may need to find a specific item within a website, and/or find a particular 
 piece of information within a specific file or item within a webpage. Depending on 
 your content, you may have challenges in all three areas; the remaining tips on 
 context and content will help you address these issues.
