--- a/10-findable.bib
+++ b/10-findable.bib
@@ -144,13 +144,13 @@
 
 @article{Teytelman2016,
  title = {Protocols.io: Virtual Communities for Protocol Development and Discussion},
- author = {Leonid Teytelman, Alexei Stoliartchouk, Lori Kindler, Bonnie L. Hurwitz},
+ author = {Leonid Teytelman and Alexei Stoliartchouk and Lori Kindler and Bonnie L. Hurwitz},
  journal = {PLoS Biology},
-  year = {2016},
-  month = {08},
-  volume = {14},
-  number = {8},
-  doi = {10.1371/journal.pbio.1002538}
+ year = {2016},
+ month = {08},
+ volume = {14},
+ number = {8},
+ doi = {10.1371/journal.pbio.1002538}
 }
 
 @book{Williams2015,
