Fixed the single quotes on line 161 and changed line 380 to match the usage on line 167 (ORCIDs rather than ORCID IDs).

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -158,7 +158,7 @@ Manuscripts are revised by colleagues in the field through peer review
 By planning ahead, you can identify what research products can go where, and
 update them if necessary before materials are published in a peer-reviewed
 journal or cited in a grant application. Recent advancements in best-practices
-for making research products more 'FAIR' has led to the creation of a vast array
+for making research products more `FAIR' has led to the creation of a vast array
 of discipline specific, and general repositories\cite{PLOS2020}, for researchers
 to deposit products created from each of the steps in the research workflow.
 Many repositories now create Digital Object Identifiers (DOIs)\cite{DOI2020}, or
@@ -377,7 +377,7 @@ build the mental map mentioned in the previous tip. File paths and breadcrumb
 trails on websites give users a sense of where the information resides and
 suggest new paths they can take \cite{Krug2014}. For example, the URLs of a
 website might all include the name of a section of the site, such as
-\texttt{/papers/} or \texttt{/blog/}. DOIs and ORCID IDs function as the best
+\texttt{/papers/} or \texttt{/blog/}. DOIs and ORCIDs function as the best
 kind of internet `signage,' ensuring users never encounter a``webpage not found"
 error message in the course of retrieving a particular publication.
 
