--- a/10-findable.bib
+++ b/10-findable.bib
@@ -127,6 +127,13 @@
   howpublished = {https://journals.plos.org/plosone/s/recommended-repositories}
 }
 
+@misc{PREreview2020,
+ author = {{PREreview}},
+ title = {v2.PREreview.org},
+ year = {2020},
+ howpublished = {\url{https://v2.prereview.org/}}
+}
+
 @misc{Pudding,
   author = {{The Pudding}},
   title = {Data sets created for stores on {The Pudding}},
