--- a/10-findable.tex
+++ b/10-findable.tex
@@ -216,7 +216,8 @@ are interlinked. The resulting network of citations aids findability greatly:
 \noindent
 Following the standards recommended by experts\cite{Wilkinson2016} in the field
 as you design your information ecosystem will reduce the barrier to finding
-relevant materials associated with your work. Remember that your future self is
+relevant materials associated with your work. Furthermore, most publishers already
+require data and code archiving to encourage reproducibility. Remember that your future self is
 also one of your users: everyone is prone to forgetfulness, so anything you do
 for others will likely pay off for yourself eventually\cite{Briney2015}.
 
@@ -271,8 +272,8 @@ information as well as creating, manipulating, or storing it. For example:
 
 \end{itemize}
 
-On a practical level, templates for file creation, data collection, and lab
-notebooks makes it easier to be consistent and to spot inconsistencies.
+On a practical level, templates for file creation, data collection, and electronic 
+lab notebooks makes it easier to be consistent and to spot inconsistencies.
 
 \rulemajor{4. Add metadata.}
 
@@ -326,14 +327,14 @@ you). Some form of XML is usually the best option when doing this: it is likely
 to be with us for many years to come, and the same pedantry that makes it
 tedious for human beings to type and read ensures that programs can read it
 without having to guess what its creators actually intended. FAIR principles
-help ease the burden of software and storage migration, by encouraging
+help ease the burden of software and storage migration. They encourage
 researchers to plan for interoperability in software and data storage from the
-beginning of their projects, obviating concerns about data migration.
+beginning of their projects, and reduces concerns about data migration.
 
 \rulemajor{5. Use search \emph{and} browsing}
 
 Research on information seeking shows that people search \emph{and} browse when
-they're trying to find information. As they browse a website or document or
+they're trying to find information. As they browse a website, document or
 file, they build a mental map of the content they could possibly find, then
 search based on that map. ``In the process, they modify their information
 requests as they learn more about what they need and what information is
@@ -453,8 +454,8 @@ file properties on Windows and labels on GitHub issues are just two examples.
 Additionally, almost all search tools leverage tags to narrow a query's scope.
 This means that you can now file a single thing in multiple ``locations'', which
 was not possible in the pre-digital era. Multiple tags also assist users from
-varied backgrounds because the terms can be customized to each type of user your
-information has.
+varied backgrounds because the terms can be customized to be inclusive of a
+diverse set of users.
 
 When choosing tags, be consistent in your depth of topical term assignment (how
 specific your terms are) and your selection of terms for subject and format (the
