--- a/10-findable.tex
+++ b/10-findable.tex
@@ -25,15 +25,18 @@
 
 \section*{Abstract}
 
-Information ecosystems consist of users, context, and content, all three of
-which must be addressed to make information findable and usable. Library
-science principles are a framework for navigating information ecosystems. They
-help researchers improve findability by focusing on the full scope of their
-users' needs and by leveraging structural elements of software that create,
-store, and access data, research findings, or academic communications, whether
-stored locally or shared on the internet. As scholars evaluate their research
-communication strategies, they can use these steps to improve how their research
-is discovered and communicated.
+The distribution of scholarly content today happens in the context of an immense
+deluge of information found on the internet. As a result, researchers face 
+serious challenges when archiving and finding information that relates to their work.
+Library science principles provide a framework for navigating information ecosystems
+in order to help researchers improve findability of their professional output. Here
+we describe the information ecosystem which consists of users, context, and 
+content, all three of which must be addressed to make information findable and usable. 
+We provide a set of tips that can help researchers evaluate who their users are, 
+how to archive their research outputs to encourage findability, and how to leverage 
+structural elements of software to make it easier to find information within and beyond
+their publications. As scholars evaluate their research communication strategies, 
+they can use these steps to improve how their research is discovered and reused.
 
 \section*{Author summary}
 
