Explaining who Borges was

--- a/10-findable.tex
+++ b/10-findable.tex
@@ -89,16 +89,16 @@ The information you wish to convey and the way it is currently organized may
 make perfect sense to you, but its meaning for your users is determined by what
 \emph{they} interpret from the information they encounter and the way it's
 arranged. This means that the organizational strategies you use are a
-communication channel in their own right. To illustrate this, Borges created a
-classification of animals whose categories included ``those belonging to the
-Emperor,'' ``embalmed ones,'' ``suckling pigs,'' ``those included in this
-classification,'' ``those drawn with a very fine camel hair brush,'' and ``those
-that look like flies from far away'' \cite{Borges2000}. While this was
-deliberately ridiculous, it illustrates the fact that every way of organizing
-knowledge embodies choices by the organizer, which may or may not align with
-those of the audience. Therefore when preparing materials for sharing it is
-important to establish context, to use clear and concise language, and minimize
-the use of jargon.
+communication channel in their own right. To illustrate this, the author Jorge
+Luis Borges created a classification of animals whose categories included
+``those belonging to the Emperor,'' ``embalmed ones,'' ``suckling pigs,''
+``those included in this classification,'' ``those drawn with a very fine camel
+hair brush,'' and ``those that look like flies from far away'' \cite{Borges2000}.
+While this was deliberately ridiculous, it illustrates the fact that every way
+of organizing knowledge embodies choices by the organizer, which may or may not
+align withthose of the audience. Therefore when preparing materials for sharing
+it is important to establish context, to use clear and concise language, and
+minimize the use of jargon.
 
 More concretely, consider the website of a faculty member coming up for tenure:
 she created the website as post-doc to publicize her papers and to make it
