--- a/10-findable.tex
+++ b/10-findable.tex
@@ -133,10 +133,14 @@ feedback will help you discover any gaps in organizational alignment.
 Given the current state of technology it can be easy to rapidly create digital
 information. With the plethora of software and formats you may employ, you
 almost certainly have information in lots of different formats, file types and
-locations. The second step in making things findable is to think ahead about
-the things you would want to be found at the completion of the project before
-cataloging what you have. That way you can have time to anticipate what can go
-where, and adapt if necessary before materials are published.
+locations. Furthermore, the surge in use of preprints and other similar reserach 
+products has created an abundance of citable research products. While they are useful
+for demostrating open research productivity, they create an added challenge of finding 
+the many different types of research products that arise in the modern workflow.
+The second step in making things findable is to think ahead about
+the things you would want to be found at the completion of the project, including
+relevant preprints, before cataloging what you have. That way you can have time to 
+anticipate what can go where, and adapt if necessary before materials are published.
 
 This is particularly relevant when examining a typical research workflow. A
 researcher uses a particular set of data sources (Figure~\ref{workflow}A), such
@@ -155,8 +159,9 @@ and published in a peer reviewed journal.
 \begin{figure}
   \includegraphics[width=\textwidth]{workflow.png}
   \captionsetup{justification=centering}
-  \caption{A typical research workflow. A-E: Major components of the research workflow.
-  F: An example set of citable repositories or tools. G: Persistent identifiers used
+  \caption{A typical research workflow. A-E: Major steps of the research workflow.
+  F: An example set of citable repositories or tools used to find research products 
+  outside of journal articles. G: Persistent identifiers used
   for the example repositories listed. DOI: Digital Object Identifier, RRID: Research
   Resource Identifier, ROR: Research Organization Registry, ORCID: Open Researcher and 
   Contributor ID. * Some institutions maintain their own repositories for archiving data
@@ -168,8 +173,8 @@ By planning ahead, you can identify what research products can go where, and
 update them if necessary before materials are published in a peer-reviewed
 journal or cited in a grant application. Advancements in best-practices
 for making research products more `FAIR' has led to the creation of an array
-of discipline specific, and general repositories\cite{PLOS2020}. Researchers
-can deposit research products created from each of the steps in the workflow (Figure~\ref{workflow}F).
+of discipline specific, and general repositories\cite{PLOS2020} (Figure~\ref{workflow}F). 
+Researchers can archive and find research products created from each of the steps in the workflow.
 Many repositories now create Digital Object Identifiers (DOIs)\cite{DOI2020}, or
 other permanent identifiers for their submissions, making them citable and
 easily linked to the contributing researchers via Open Researcher and Contributor
